--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,15 +31,22 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media (min-width: 600px) and (min-height: 768px) {
+@media (min-width: 917px) and (min-height: 768px) {
+  :root {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 1030px) and (min-height: 768px) {
   :root {
     font-size: 12px;
   }
 }
 
-@media (min-width: 1024px) and (min-height: 900px) {
+
+@media (min-width: 1224px) and (min-height: 900px) {
   :root {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
@@ -55,12 +62,24 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 body {
-  overscroll-behavior: none;
-  background-color: var(--color-dark-cyan);
+  /* overscroll-behavior: none;
+  background-color: var(--color-dark-cyan); */
+     background-color: #1e521e; /* Dark green felt base */
+  background-image: 
+    repeating-linear-gradient(
+      45deg,
+      rgba(0, 0, 0, 0.05) 0px,
+      rgba(0, 0, 0, 0.05) 2px,
+      transparent 2px,
+      transparent 6px
+    );
+  background-size: cover;
+  font-family: sans-serif;
+  margin: 0;
 }
 
 #__nuxt {
