--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -68,7 +68,12 @@ body {
 body {
   /* overscroll-behavior: none;
   background-color: var(--color-dark-cyan); */
-     background-color: #1e521e; /* Dark green felt base */
+
+  margin: 0;
+}
+
+#__nuxt {
+       background-color: #1e521e; /* Dark green felt base */
   background-image: 
     repeating-linear-gradient(
       45deg,
@@ -79,7 +84,6 @@ body {
     );
   background-size: cover;
   font-family: sans-serif;
-  margin: 0;
 }
 
 #__nuxt {
