--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,3 @@
-
-
 @font-face {
   font-family: 'Big Shoulders Display';
   font-style: normal;
@@ -73,7 +71,7 @@ body {
 }
 
 #__nuxt {
-       background-color: #1e521e; /* Dark green felt base */
+       /* background-color: #1e521e;
   background-image: 
     repeating-linear-gradient(
       45deg,
@@ -84,6 +82,9 @@ body {
     );
   background-size: cover;
   font-family: sans-serif;
+; */
+background: radial-gradient(circle closest-corner at top 50% right calc(50% + 160px),rgba(0,0,0,0) 0,rgba(0,0,0,.45) 98%),repeat center center url(/green_table.png)
+  /* background: url('/green_table.png') repeat; */
 }
 
 #__nuxt {
