--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'Big Shoulders Display';
   font-style: normal;
@@ -21,6 +20,7 @@
   --color-off-white: #ffffef;
   --color-blue-white: #deffff;
   --color-gold: #ffd900;
+  --color-green: #16a34a;
   
   font-size: 7px;
   font-family: 'Big Shoulders Display', 'Arial Narrow', sans-serif;
@@ -28,6 +28,9 @@
   color: var(--color-black);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --v-hover-opacity: 0.7;
+  --v-theme-overlay-multiplier: 0.5;
 }
 /* 
 @media (min-width: 917px) and (min-height: 768px) {
@@ -42,6 +45,39 @@
   }
 } */
 
+/* test, too big on split, need to be fixed prblbl */
+/* @media (min-width: 600px) and (min-height: 690px) {
+  :root {
+    font-size: 11px;
+  }
+}
+
+@media (min-width: 600px) and (min-height: 740px) {
+  :root {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 600px) and (min-height: 798px) {
+  :root {
+    font-size: 13px;
+  }
+}
+
+@media (min-width: 600px) and (min-height: 866px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 1024px) and (min-height: 1300px) {
+  :root {
+    font-size: 16px;
+  }
+} */
+/* test, too big on split, need to be fixed prblbl */
+
+/* current actual sizes */
 @media (min-width: 600px) and (min-height: 690px) {
   :root {
     font-size: 10px;
@@ -71,6 +107,10 @@
     font-size: 16px;
   }
 }
+/* current actual sizes */
+
+
+
 /* 
 @media (min-width: 1224px) and (min-height: 990px) {
   :root {
@@ -120,7 +160,7 @@ body {
     background-size: cover;
     font-family: sans-serif;
     ; */
-    background: radial-gradient(circle closest-corner at top 50% right calc(50% + 160px),rgba(0,0,0,0) 0,rgba(0,0,0,.45) 98%),repeat center center url(/green_table.webp);
+    /* background: radial-gradient(circle closest-corner at top 50% right calc(50% + 160px),rgba(0,0,0,0) 0,rgba(0,0,0,.45) 98%),repeat center center url(/green_table.webp); */
     /* background: url('/green_table.png') repeat; */
   }
   
@@ -207,5 +247,13 @@ body {
       transition-duration: 0s !important;
     }
   }
-@import "tailwindcss";
-@import "@nuxt/ui";
+
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
